# distributed-path-tracer

./: .gitignore  Dockerfile  LICENSE  README.md  commands.txt  samconfig.toml  template.yml
.devcontainer/: Dockerfile  (+1 more)
path-tracer/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  vcpkg.json
path-tracer-core/: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  vcpkg.json
path-tracer-core/.cache/clangd/index/: aabb.cpp.7725B34F809E3FEC.idx  aabb.hpp.FF0ADA32F20B5660.idx  application.hpp.8FF7DBDBF0A91A70.idx  camera.cpp.85CF4CDE57939673.idx  camera.hpp.7F1260DFF473867F.idx  cgltf.cpp.BBEF66DDDA086DEE.idx  component.cpp.C736E2A38A59F47E.idx  component.hpp.769C517F643E1BEF.idx  custom_cgltf.h.B46A14CD808ECB19.idx  entity.cpp.004B32D9C824A4B2.idx  entity.hpp.EBEDA531A755F1F2.idx  entity.inl.09C7B75182110393.idx  image.cpp.32A0CA0E295E819E.idx  image.hpp.F386D2619CD10BDA.idx  image_texture.cpp.FA3A4FAA509EBF66.idx  image_texture.hpp.0E51955055F8BC09.idx  kd_tree.hpp.EF6605170621CDCB.idx  main.cpp.617C8B0C3CB62F80.idx  master.cpp.F8B082BA90CFC488.idx  master.hpp.C5F90A895B0E10C2.idx  mat3.hpp.2AEACEFF6C0888AC.idx  mat3.inl.5F38409BAF024EA2.idx  material.cpp.6463902539F60E2D.idx  material.hpp.BBC7B431FC0BBEB6.idx  math.hpp.BB5EEC94C840A9A3.idx  math.inl.A86FE35FE6A290F7.idx  mesh.cpp.C15DEEF266DC5E6A.idx  mesh.hpp.C29C748B083AD8B0.idx  model.cpp.85784D4416034FAC.idx  model.hpp.0F6EEC36EABCE307.idx  pbr.cpp.D90240CCBE166244.idx  pbr.hpp.92BD0058A736324D.idx  pch.cpp.1B658353DD9EABEE.idx  pch.cpp.28949B114727B4A8.idx  pch.hpp.83BBB3D4A862305A.idx  pch.hpp.BB6E367A2AC433F4.idx  quat.cpp.440FEB44F60AED2F.idx  quat.hpp.95CD8D978DAA26EE.idx  quat.inl.CB7ED2B87619DBC4.idx  rand_cone_vec.cpp.CC98A198EB8A96F8.idx  (+31 more)
path-tracer-core/.devcontainer/: Dockerfile  devcontainer.json
path-tracer-core/events/: event.json
path-tracer-core/path_tracer/: CMakeLists.txt
path-tracer-core/path_tracer/src/core/: material.cpp  mesh.hpp  pbr.cpp  pbr.hpp  vertex.hpp
path-tracer-core/path_tracer/src/geometry/: aabb.cpp  ray.cpp  triangle.hpp
path-tracer-core/path_tracer/src/image/: image.hpp  image_texture.cpp  image_texture.hpp  texture.hpp
path-tracer-core/path_tracer/src/math/: mat3.hpp  mat3.inl  math.hpp  quat.cpp  quat.hpp  vec2.hpp  vec2.inl  vec4.inl
path-tracer-core/path_tracer/src/scene/: camera.hpp  entity.hpp  entity.inl  model.cpp  model.hpp  transform.cpp  transform.hpp
path-tracer-core/path_tracer/src/util/: rand_cone_vec.cpp  rand_cone_vec.hpp  string.inl  thread_pool.hpp
path-tracer-core/path_tracer_lib/: CMakeLists.txt
path-tracer-core/path_tracer_lib/path_tracer/: pch.cpp  pch.hpp
path-tracer-core/path_tracer_lib/path_tracer/core/: kd_tree.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  pbr.cpp  pbr.hpp  renderer.cpp  renderer.hpp  utils.hpp  vertex.hpp
path-tracer-core/path_tracer_lib/path_tracer/geometry/: aabb.cpp  aabb.hpp  ray.cpp  ray.hpp  triangle.cpp  triangle.hpp
path-tracer-core/path_tracer_lib/path_tracer/image/: image.cpp  image.hpp  image_texture.cpp  image_texture.hpp  texture.hpp
path-tracer-core/path_tracer_lib/path_tracer/math/: mat3.hpp  math.hpp  math.inl  quat.cpp  quat.hpp  quat.inl  vec2.hpp  vec2.inl  vec3.hpp  vec3.inl  vec4.hpp  vec4.inl
path-tracer-core/path_tracer_lib/path_tracer/scene/: camera.cpp  camera.hpp  component.cpp  component.hpp  entity.cpp  entity.hpp  model.cpp  model.hpp  sun_light.hpp  transform.cpp  transform.hpp
path-tracer-core/path_tracer_lib/path_tracer/util/: rand_cone_vec.cpp  rand_cone_vec.hpp  string.cpp  string.hpp  thread_pool.cpp  thread_pool.hpp
path-tracer-core/src/: application.hpp  main.cpp  pch.hpp
path-tracer-core/src/cloud/: s3.cpp  s3.hpp
path-tracer-core/src/master/: master.cpp  master.hpp
path-tracer-core/src/models/: cloud_ray.hpp  intersect_result.hpp  vectors.hpp  work_info.hpp
path-tracer-core/src/processors/: application.hpp
path-tracer-core/src/processors/master/: master.cpp  master.hpp
path-tracer-core/src/processors/worker/: accumulation_worker.cpp  direct_lighting_worker.cpp  indirect_lighting_worker.cpp  intersection_worker.cpp  shading_worker.cpp  worker.cpp  worker.hpp
path-tracer-core/src/renderer/: scene.hpp
path-tracer-core/src/scene/: intersect.cpp  load_gltf.cpp  scene.cpp  scene.hpp
path-tracer-core/src/worker/: worker.cpp  worker.hpp
path-tracer/path_tracer/: CMakeLists.txt
path-tracer/path_tracer/src/core/: kd_tree.hpp  material.hpp  mesh.cpp  renderer.cpp  renderer.hpp
path-tracer/path_tracer/src/geometry/: aabb.hpp  ray.hpp
path-tracer/path_tracer/src/image/: image.cpp
path-tracer/path_tracer/src/math/: vec3.hpp
path-tracer/path_tracer/src/scene/: component.hpp  entity.cpp
path-tracer/path_tracer/src/util/: string.cpp  string.hpp
path-tracer/scenes/cornell-box/: cornell.gltf
path-tracer/scenes/jack-of-blades/: jack-of-blades.gltf
path-tracer/scenes/sponza-new/: sponza.gltf
path-tracer/src/: main.cpp
(+17 files in other folders)
